--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Parisienne&family=Poppins:wght@300;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Parisienne&family=Poppins:wght@300;400;500;700&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -8,7 +8,7 @@
 html,
 body {
   scroll-behavior: smooth;
-  scroll-padding-top: 6rem;
+  scroll-padding-top: 3rem;
   font-family: 'Poppins', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   --desktop_width: 1080px;
   --mobile_width: 500px;
@@ -41,6 +41,13 @@ a {
   position: fixed;
   top: 0;
   width: 100%;
+  transition: background-color 0.2s, height 0.2s;
+  z-index: 1;
+}
+.header_container.active {
+  background-color: #fff;
+  height: 5.5rem;
+
 }
 .header_content {
   height: 100%;
@@ -63,7 +70,7 @@ a {
   align-items: center;
   transition: color 0.2s;
 }
-.header_content nav a:hover {
+.header_content .desktop_nav a:hover {
   color: #309a37;
 }
 .header_content .image_container {
@@ -81,6 +88,156 @@ a {
   display: none;
 }
 
+/* HERO */
+.hero {
+  /* padding-top: 7rem; */
+  min-height: 100vh;
+  background-image: linear-gradient(#ffffff00, #ffffff50), url('../assets/hero.jpg');
+  background-color: #d5d5d5;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero .root h1 {
+  font-family: Parisienne;
+  font-size: 5rem;
+}
+.hero .root p {
+  font-size: 1rem;
+  text-align: center;
+  text-transform: uppercase;
+}
+.hero .root a {
+  display: block;
+  text-align: center;
+  width: max-content;
+  margin: auto;
+  margin-top: 2rem;
+  padding: 1rem;
+  font-size: 0.9rem;
+  background-color: #309a37;
+  color: #caeecc;
+  transition: background-color 0.2s;
+}
+.hero .root a:hover {
+  background-color: #1c5920;
+}
+
+/* SECTION */
+section > .body {
+  max-width: 920px;
+  margin: auto;
+  padding-top: 5rem;
+}
+section:last-child > .body {
+  margin-bottom: 5rem;
+}
+.dnone {visibility: hidden;}
+
+
+/* ABOUT */
+.about > .body {
+  max-width: 920px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 5rem;
+}
+.about > .body img {
+  width: 100%;
+}
+.about > .body .content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.about > .body .content h1 {
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: 500;
+  margin-bottom: 2rem;
+}
+.about > .body .content p {
+  line-height: 2rem;
+  font-weight: 300;
+}
+
+/* NEW ARRIVALS */
+.new > .body > h1,
+.trends > .body > h1,
+.sale > .body > h1,
+.contact > .body > h1 {
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: 500;
+  margin-bottom: 5rem;
+}
+
+/* CONTACT */
+.contact form {
+  max-width: 500px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+  margin: auto;  
+}
+
+.contact form label span {
+  font-size: 0.9rem;
+  font-weight: 400;
+  margin-bottom: 0.5rem;
+  display: block;
+}
+.contact form label textarea,
+.contact form label input {
+  display: block;
+  width: 100%;
+  padding: 0.5rem;
+  font-family: inherit;
+  font-weight: 300;
+}
+.contact form label:last-child {
+  grid-column: 1 / span 2;
+}
+.contact form button {
+  font-family: inherit;
+  display: block;
+  color: #fff;
+  background-color: #309a37;
+  text-transform: uppercase;
+  font-size: 0.9rem;
+  font-weight: 400;
+  width: max-content;
+  margin: auto;
+  padding: 1rem;
+  border: 0;
+  transition: background-color 0.2s;
+  cursor: pointer;
+  margin-top: 1rem;
+}
+.contact form button:hover {
+  background-color: #1c5920;
+}
+.contact .form_output {
+  text-align: center;
+  margin-top: 0.5rem;
+}
+
+/* FOOTER */
+footer {
+  height: 7rem;
+  background-color: #323644;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 
 @media (max-width: 1080px) {
   .header_content .desktop_nav {
@@ -93,30 +250,42 @@ a {
     position: absolute;
     top: 0;
     right: 0;
-    background-color: #6c5ce7;
     text-align: center;
     height: max-content;
-    gap: 1rem;
-    padding: 1rem;
+    gap: 0rem;
+    padding: 0rem;
     margin-top: 4rem;
   }
   .header_content .mobile_nav a {
+    background-color: #309a37;
+    color: #caeecc;
     justify-content: center;
-    padding: 1rem;
+    padding: 1.5rem;
+    transition: all 0.2s;
   }
+  .header_content .mobile_nav a:hover {
+    background-color: #1c5920;
+  }
+
   .header_content .mobile_button {
     font-size: 0.8rem;
     text-transform: uppercase;
     width: 3rem;
     height: 3rem;
-    background-color: #a29bfe;
-    color: #6c5ce7;
+    background-color: #309a37;
+    background-color: #f3ab0e;
+    background-color: #f9d13a;
+    color: #f9d13a;
+    color: #f3ab0e;
     border: 0;
-    padding: 0.5rem;
+    border: 0.1rem solid inherit;
+    padding: 0.4rem;
     cursor: pointer;
     transition: background-color 0.2s;
   }
   .header_content .mobile_button:hover {
-    background-color: #a29bfe;
+    background-color: #f9d13a;
+    background-color: #f7c509; /* -3 */
+    /* color: #f8f0dd; */
   }
 }
